fix platformSelector text alignment

--- a/src/components/platformSelector/style.module.scss
+++ b/src/components/platformSelector/style.module.scss
@@ -139,8 +139,9 @@
 
 .item-text {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  gap: 0.25rem;
+  text-align: left;
 }
 
 @media (min-width: 640px) {
